--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body, html {
 
 .bg {
   /* The image used */
-  background-image: url("https://i.im.ge/2022/03/26/lYc0l4.jpg");
+  background-image: url("https://i.im.ge/2022/03/28/lb2kvT.jpg");
 
   /* Full height */
   height: 100%; 
