--- a/index.html
+++ b/index.html
@@ -2,32 +2,15 @@
 <head>
 <title> Radio Adhyatma Jyoti 104.8 MHz </title>
 </head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body, html {
-  height: 100%;
-  margin: 0;
-}
-
-.bg {
-  /* The image used */
-  background-image: url("https://i.im.ge/2022/03/28/lb2kvT.jpg");
-
-  /* Full height */
-  height: 100%; 
-
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-</style>
-  <h1> radioaj.com.np coming soon </h1>
-</head>
 <body>
 
-<div class="bg"></div>
+ <h1> RADIO ADHYATMA JYOTI LIVE </h1>
+  <audio style="width: 100%; padding-left: 0px; "title+"LISTEN LIVE"
+src="http://216.55.141.189:8074/;"
+autoplay="autoplay" controls="controls"></audio>
 
+<footer> Powered by <a href="https://smmh.com.np/" target="_blank">Satyam Multi Media House</a>     </footer>
+ 
 
 </body>
 </html>
