--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 <body>
 
  <h1> RADIO ADHYATMA JYOTI LIVE </h1>
-
- <audio src="https://radio-streaming-serv-1.hamropatro.com/radio/8360/radio.mp3"></audio>
+  <audio style="width: 100%; padding-left: 0px; "title+"LISTEN LIVE"
+src="https://radio-streaming-serv-1.hamropatro.com/radio/8360/radio.mp3/;"
+autoplay="autoplay" controls="controls"></audio>
 
 <footer> Powered by <a href="https://smmh.com.np/" target="_blank">Satyam Multi Media House</a>     </footer>
  
