--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 
- <h1> RADIO ADHYATMA JYOTI LIVE </h1>
+ <h1> FM ADHYATMA JYOTI LIVE </h1>
   <audio style="width: 100%; padding-left: 0px; "title+"LISTEN LIVE"
 src="http://216.55.141.189:8074/;"
 autoplay="autoplay" controls="controls"></audio>
