--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             }
 
             .bgimg {
-                background-image: url("radio.jpg")
+                background-image: url("images/radio.jpg")
             }
 
             .bgimg2 {
