--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- Header / Home-->
     <header class="w3-display-container w3-wide bgimg w3-grayscale-min" id="home">
         <div class="w3-display-middle w3-text-white w3-center">
-            <h1 class="w3-jumbo">FM Adhyatma Jyoti Online</h1>
+            <h1 class="w3-jumbo">Radio Adhyatma Jyoti </h1>
             <h1 class="w3-jumbo">104.8 MHz</h1>
             <h1 class="w3-jumbo">LIVE</h1>
 
