--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
     </audio>
         </div> </h1>
     </header>
+        <center>
+<a href="https://www.classic.com.np/">
+  <img src="https://npratopaticdn.prixacdn.net/media/promo/classic-tech_JTYPiELKVW.gif" alt="Classictech">
+</a>
+                </center>
 
 </body>
 
