--- a/index.html
+++ b/index.html
@@ -53,11 +53,16 @@
     <audio controls="controls" autoplay="autoplay" src="https://radio-streaming-serv-2.hamropatro.com:8070/radio.mp3">
     </audio>
         </div> </h1>
+            </header>
+        <footer>
+            
             <div align="center">
 <a href="https://www.classic.com.np/">
   <img src="https://npratopaticdn.prixacdn.net/media/promo/classic-tech_JTYPiELKVW.gif" alt="Classictech">
 </a>
-</header>
+                    
+                    </footer>                
+
 </body>
 
 </html>
