--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
     <audio controls="controls" autoplay="autoplay" src="https://radio-streaming-serv-2.hamropatro.com:8070/radio.mp3">
     </audio>
         </div> </h1>
-            <h1> <a href="https://www.classic.com.np/">
+            <h1> <div> <a href="https://www.classic.com.np/">
   <img src="https://npratopaticdn.prixacdn.net/media/promo/classic-tech_JTYPiELKVW.gif" alt="Classictech">
-</a> </h1>
+                    </a> </div> </h1>
             </header>
        
            
